<resources>

    <string name="bad_network_view_tip">Your network is not to force, can tap the screen to reload</string>
    <string name="failed_load_data">Failed to load data</string>
    <string name="exit_program">Press one time to exit the program</string>


    <string name="home_page">Home</string>
    <string name="project">Project</string>
    <string name="official_account">Official</string>
    <string name="mine">Mine</string>


    <string name="log_out">Sign out</string>


    <string name="mine_points">My scores</string>
    <string name="mine_blog">My blog</string>
    <string name="mine_nuggets">Nuggets</string>
    <string name="mine_github">My Github</string>
    <string name="github">Github</string>
    <string name="browsing_history">Browsing History</string>

    <string name="about_me">About me</string>
    <string name="my_share">My Share</string>
    <string name="my_collection">My collection</string>

    <string name="no_login">Not Logged</string>
    <string name="click_login">Click to login</string>

    <string name="newest">Newest</string>
    <string name="topping">Topping</string>


    <string name="please_enter_keywords">Please enter keywords</string>
    <string name="keyword_not_null">Search keyword can not be empty</string>
    <string name="keyword_null">No data on %s, replace keyword search</string>


    <string name="no_network">The current network is unavailable</string>
    <string name="ranking_list">Leaderboard</string>

    <string name="ranking">The first %s name</string>
    <string name="coin">%d points</string>
    <string name="lever">%d level</string>


    <string name="author_share">The authors share</string>

    <string name="man_info">Level %d ranking %s points %d</string>

    <string name="no_data">No data</string>

    <string name="app_name">Play Android</string>
    <string name="enter_name">Please input Username</string>
    <string name="enter_password">Please enter your password</string>

    <string name="register_account">Register an account</string>
    <string name="login">Log in</string>

    <string name="no_browsing_history">There are currently no browsing history</string>
    <string name="no_more_data">No more data</string>
    <string name="Home">Home</string>
</resources>