<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">


    <ImageView
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_120"
        android:src="@drawable/login" />


    <LinearLayout
        android:id="@+id/loginInputElements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24" />


        <!--        两个输入框-->

        <EditText
            android:id="@+id/loginUserNumberEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"

            android:layout_marginHorizontal="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_25"

            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_name"

            android:importantForAutofill="no"

            android:paddingHorizontal="@dimen/dp_5"
            android:textColor="@color/text_color"
            android:textColorHint="@color/plain"

            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_marginHorizontal="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_edittext"


            android:orientation="horizontal">
<!--          水平排序-->

            <EditText
                android:id="@+id/loginPassNumberEdit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"

                android:hint="@string/enter_password"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"

                android:lines="1"
                android:paddingHorizontal="@dimen/dp_5"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/plain"
                android:textSize="@dimen/sp_14"

                tools:ignore="TextFields" />

<!--            layout_weight="1"	在水平方向按权重分配剩余宽度-->



<!--            <EditText-->
<!--            android:id="@+id/loginPassNumberEdit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/dp_35"-->

<!--            android:layout_marginHorizontal="@dimen/dp_35"-->
<!--            android:layout_marginTop="@dimen/dp_25"-->

<!--            android:background="@drawable/bg_edittext"-->
<!--            android:hint="@string/enter_password"-->

<!--            android:importantForAutofill="no"-->

<!--            android:paddingHorizontal="@dimen/dp_5"-->
<!--            android:textColor="@color/text_color"-->
<!--            android:textColorHint="@color/plain"-->

<!--            android:textSize="@dimen/sp_14" />-->

        <ImageView
            android:id="@+id/loginPassNumberClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/dp_3"
            android:src="@drawable/ic_close"
            android:tint="@color/text_color_black"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/loginPassNumberVisible"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/dp_3"
            android:src="@drawable/ic_eye"
            android:tint="@color/text_color_black"
            tools:ignore="ContentDescription,UseAppTint" />
    </LinearLayout>

        <TextView
            android:id="@+id/loginTvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_10"

            android:text="@string/register_account"
            android:textColor="@color/text_click_color"
            android:textSize="@dimen/sp_14"
           />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_35"
            android:text="@string/login"
            android:textColor="@color/text_color_black"
            android:backgroundTint="@color/white"/>
<!--        强制覆盖颜色-->

    </LinearLayout>

</LinearLayout>